# mtls-sidecar

./: .dockerignore  Cargo.toml  Dockerfile  README.md  benchmark.rs  protoc.sh
.github/workflows/: ci.yml  docker-build-push.yml  docker.yml
benchmark/: benchmark.rs
examples/: Upstream.java  upstream.go  upstream.js  upstream.pl  upstream.py  upstream.rs
examples/kubernetes/: bundle.yaml  cert-ca.yaml  clusterissuer.yaml  deploy.yaml  pod.yaml  svc.yaml
src/: client_cert.rs  config.rs  error.rs  header_filter.rs  http_client_like.rs  lib.rs  main.rs  monitoring.rs  proxy.rs  proxy_inbound.rs  proxy_outbound.rs  tls_manager.rs  utils.rs  watcher.rs
tests/: integration.rs
