[package]
name = "mtls-sidecar"
version = "0.1.0"
edition = "2021"

[lib]
name = "mtls_sidecar"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
http-body-util = "0.1"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
x509-parser = "0.18"
notify = "8.2"
axum = { version = "0.8", features = ["tokio"] }
prometheus = "0.14"
lazy_static = "1.4"
rustls-pki-types = "1.12.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
tempfile = "3.23"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "crypto", "pem"] }
time = "0.3"
portpicker = "0.1"
thiserror = "2.0.17"
http = "1.3.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.23"
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots-no-provider", "json"] }
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.14", default-features = false, features = ["transport", "router", "codegen"] }
prost = "0.14"
tonic-prost = "0.14.2"
tokio-stream = "0.1"

[[bench]]
name = "benchmark"
harness = false
path = "benchmark/benchmark.rs"

[profile.release]
lto = true
codegen-units = 1
debug = "line-tables-only"
